# Life-Research-and-Analysis-App

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  reset.sh  sdf  start.sh  start_ubuntu.sh  stop.sh
docker/nginx/: Dockerfile  nginx.conf
docker/sql/: init.sql
docker_compose_files/: docker-compose.prod.yml  docker-compose_django.yml  docker-compose_eval.yml  docker-compose_example.yml  docker-compose_front.yml  docker-compose_test.yml
docker_compose_libs/celery_tasks/: README.md  celery_config.py  tasks.py  utils.py
docker_compose_libs/shared_utils/: README.md  image_utils__unused.py
env_files/: celery_tasks.env  mongo-express.env  mongoDB_connect.env  mongoDb.env  tests.env
mainApi/: Dockerfile  Dockerfile.prod  config.py  requirements.txt  start.sh
mainApi/app/: DEBUG.md  debug.py  main.py
mainApi/app/auth/: README.md  auth.py  routers.py  settings.py
mainApi/app/auth/models/: user.py
mainApi/app/db/: mongodb.py  mongodb_utils.py
stitching/: Dockerfile  main.py  requirements.txt  test.py
stitching/libs/ashlar/: Dockerfile
stitching/libs/ashlar/ashlar/: _version.py  reg.py
stitching/libs/ashlar/ashlar/scripts/: make_alignment_movie.py  preview_slide.py
traefik/: Dockerfile  traefik.dev.yml  traefik.prod.toml
wasm/: Cargo.toml
wasm/src/: lib.rs
