[package]
name = "ias-wasm"
version = "0.1.0"
authors = ["Lewis Zhou <lewis@programowl.com>"]
description = "A speed boost package for the IAS project"
license = "Private"
repository = "https://github.com/daisukekubota0823/IAS-project/wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
libmath = "0.1.4"
